# VS_CM_JE

./: README.md
Auto_Socket_1/: CMakeLists.txt  main.cpp
Code/Testserver/: CMakeLists.txt  main.cpp
Code/build-Testserver-Desktop-Debug/: CMakeCache.txt  Makefile  Testserver  Testserver.cbp  cmake_install.cmake
Testi/: CMakeLists.txt  main.cpp
cppsocket-0.8.4/cppsocket/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  TODO  acinclude.m4  acinclude.m4.in  aclocal.m4  configure  configure.in  cppsocket.doxygen  ltconfig  mkinstalldirs
cppsocket-0.8.4/cppsocket/cppsocket/: Makefile.am  Makefile.in  addrtut.doc  cppsocket.doc  hltut.doc  license.doc  lltut.doc  semaphore.cpp  tutorial.doc
cppsocket-0.8.4/cppsocket/cppsocket-api/: Makefile.am  Makefile.in
cppsocket-0.8.4/cppsocket/cppsocket-api/logos/: Makefile.am  Makefile.in  logo.eps
